Sonarqube issue fixes admin service #1